--- a/index.ipynb
+++ b/index.ipynb
@@ -77,7 +77,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# from sklearn.model_selection import train_test_split\n",
+    "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)\n",
+    "from sklearn.m"
+   ]
   },
   {
    "cell_type": "markdown",
