--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,8 @@
    "source": [
     "# from sklearn.model_selection import train_test_split\n",
     "# X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "X_train, X_t"
    ]
   },
   {
