Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,6 +100,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "linreg = LinearRegression()\n",
+    "linreg.fit(X_train, y_train)\n",
+    "\n",
+    "y_hat_train = linreg.predict(X_train)\n",
+    "y_hat_test = linreg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
