Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -117,7 +117,9 @@
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.linear"
+   ]
   },
   {
    "cell_type": "markdown",
