Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -118,7 +118,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear"
+    "from sklearn.linear_model import LinearRegression\n",
+    "linreg "
    ]
   },
   {
