--- a/index.ipynb
+++ b/index.ipynb
@@ -119,7 +119,8 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "linreg "
+    "linreg = LinearRegression(\n",
+    "linreg)"
    ]
   },
   {
