Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -119,8 +119,8 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
-    "linreg = LinearRegression(\n",
-    "linreg)"
+    "linreg = LinearRegression()\n",
+    "linreg.f"
    ]
   },
   {
