--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "linreg = LinearRegression()\n",
-    "linreg.f"
+    "linreg.fit"
    ]
   },
   {
