--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,9 @@
    "source": [
     "from sklearn.linear_model import LinearRegression\n",
     "linreg = LinearRegression()\n",
-    "linreg.fit(X_train, y_train)\n"
+    "linreg.fit(X_train, y_train)\n",
+    "\n",
+    "y_hat_train = lin"
    ]
   },
   {
