--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,8 @@
     "linreg = LinearRegression()\n",
     "linreg.fit(X_train, y_train)\n",
     "\n",
-    "y_hat_train = lin"
+    "y_hat_train = linreg.predict(X_train)\n",
+    "y"
    ]
   },
   {
