--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
     "linreg.fit(X_train, y_train)\n",
     "\n",
     "y_hat_train = linreg.predict(X_train)\n",
-    "y_hat_test = linre"
+    "y_hat_test = linreg.predict(X_test)"
    ]
   },
   {
