--- a/index.ipynb
+++ b/index.ipynb
@@ -135,10 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "train_residuals = y_hat_train - y_train\n",
+    "test_residuals = y_hat_test - y_test"
+   ]
   },
   {
    "cell_type": "markdown",
