--- a/index.ipynb
+++ b/index.ipynb
@@ -121,6 +121,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "linreg = LinearRegression()\n",
     "linreg.fit(X_train, y_train)\n",
+    "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=1, normalize=False)\n",
     "\n",
     "y_hat_train = linreg.predict(X_train)\n",
     "y_hat_test = linreg.predict(X_test)"
