--- a/index.ipynb
+++ b/index.ipynb
@@ -153,9 +153,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Mean Squarred Error: 21.23065812356327\n",
+      "Test Mean Squarred Error: 26.190274532104333\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
